<resources>
    <string name="app_name">ProjectList</string>

    <string name="text">My Nanodegree Apps!</string>
    <string name="button1">POPULAR MOVIES</string>
    <string name="button2">STOCK HAWK</string>
    <string name="button3">BUILD IF BIGGER</string>
    <string name="button4">MAKE YOUR APP MATERIAL</string>
    <string name="button5">GO UBIQUITOUS</string>
    <string name="button6">CAPSTONE</string>

    <string name="toast_button1">this button will launch my popular movies app!</string>
    <string name="toast_button2">this button will launch my stock hawk app!</string>
    <string name="toast_button3">this button will launch my build it bigger app!</string>
    <string name="toast_button4">this button will launch my make your app material app!</string>
    <string name="toast_button5">this button will launch my go ubiquitous app!</string>
    <string name="toast_button6">this button will launch my capstone app!</string>
</resources>
