<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    tools:context="com.zividig.projectlist.MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        />
    <Button
        android:id="@+id/button1"
        style="@style/ProjectButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        />
    <Button
        android:id="@+id/button2"
        style="@style/ProjectButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        />
    <Button
        android:id="@+id/button3"
        style="@style/ProjectButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        />
    <Button
        android:id="@+id/button4"
        style="@style/ProjectButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        />
    <Button
        android:id="@+id/button5"
        style="@style/ProjectButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        />
    <Button
        android:id="@+id/button6"
        style="@style/ProjectButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        />
</LinearLayout>
